syntax = "proto3";

package gs.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

service DurationAccess {

    rpc try (DurationAccessRequest) returns (gs.commons.dto.Status);

}

message DurationAccessRequest {
    string path = 1;
}