syntax = "proto3";

package gs.service.user;

import "konekko.me/gosion/commons/dto/commons.proto";

service Message {

    rpc SendToUser (SendToUserRequest) returns (gs.commons.dto.Status);

}

message SendToUserRequest {
    string userId = 1;
    int64 contractType = 2;
    string base64 = 3;
}